# download-manager

./: .gitignore  Cargo.toml  deny.toml
.github/workflows/: release.yml
src/: cmd.rs  item.rs  lib.rs  main.rs
